# mail-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  SYNTHESIS.md  pyproject.toml
.claude/conversations/: 2026-04-17_lista-las-tools-de-mail-mcp-disponibles_b037b0e9.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: INTEGRATION.md  OAUTH_MICROSOFT.md  THREAT_MODEL.md  TROUBLESHOOTING.md  V021_PLAN.md  V024_PLAN.md
src/mail_mcp/: __init__.py  __main__.py  autoconfig.py  config.py  credentials.py  doctor.py  imap_client.py  keyring_store.py  oauth.py  server.py  smtp_client.py  wizard.py
src/mail_mcp/safety/: __init__.py  attachments.py  guards.py  paths.py  redaction.py  tls.py  validation.py
src/mail_mcp/tools/: __init__.py  drafts.py  organize.py  read.py  schemas.py  send.py
tests/: test_autoconfig.py  test_drafts_mailbox_resolution.py  test_drafts_mailbox_strict.py  test_eml_attachment_roundtrip.py  test_folder_ops.py  test_forwarded_rfc822.py  test_guards.py  test_header_guard.py  test_html_only_body.py  test_oauth.py  test_paths.py  test_raw_passthrough.py  test_redaction.py  test_reply_forward.py  test_safe_uid_expunge.py  test_send_rate_limit.py  test_server_classify.py  test_server_gating.py  test_smtp_message.py  test_trash_mailbox_resolution.py  test_update_draft_attachments.py  test_v024_tools.py  test_validation.py
tests/integration/: README.md  _contract.md  conftest.py  docker-compose.yml  test_integration_drafts_send.py  test_integration_read.py  test_integration_write.py
tests/integration/fixtures/: sample_emails.py
