[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mail-mcp"
version = "0.3.2"
description = "A privacy-first IMAP/SMTP MCP server for Claude Desktop, Claude Code, and Codex CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mario Hernández", email = "m@mariohernandez.es" }]
keywords = ["mcp", "imap", "smtp", "email", "claude", "codex", "keychain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Security",
]
dependencies = [
    "mcp>=1.2.0",
    "imapclient>=3.0.1",
    "keyring>=25.0.0",
    "pydantic>=2.6.0",
    "certifi>=2024.0.0",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
cli = [
    "questionary>=2.0.0",
    "rich>=13.7.0",
    "dnspython>=2.4.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "questionary>=2.0.0",
    "rich>=13.7.0",
    "dnspython>=2.4.0",
]
integration = [
    "testcontainers>=4.0",
    "requests>=2.30",
]
oauth-microsoft = [
    "msal>=1.28.0",
]

[project.scripts]
mail-mcp = "mail_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/mario-hernandez/mail-mcp"
Repository = "https://github.com/mario-hernandez/mail-mcp"
Issues = "https://github.com/mario-hernandez/mail-mcp/issues"
Security = "https://github.com/mario-hernandez/mail-mcp/security/policy"

[tool.hatch.build.targets.wheel]
packages = ["src/mail_mcp"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = ["research", ".venv", "dist", "build"]
markers = [
    "integration: end-to-end tests against a real IMAP/SMTP server (GreenMail). Opt-in via MAIL_MCP_INTEGRATION=1 or -m integration.",
]
